# conduit-desktop

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-app-update.yml  electron-builder.yml  eslint.config.js  glama.json  index.html  overlay.html  package-lock.json  package.json  picker.html  tailwind.config.js  vite.config.ts
.claude/commands/: dev.md  notification.md
.github/workflows/: build-freerdp.yml  cache-freerdp.yml  release.yml  test-windows.yml
docs/: ADDING_ENTRY_TYPES.md  BUILD_FREERDP.md  DEPENDENCY_UPGRADES.md  FEATURES.md  LOCAL_SUPABASE.md  SUPABASE.md
electron/: main.ts  preload.cts  tsconfig.json
electron/ipc/: ai.ts  approval.ts  auth.ts  autotype.ts  biometric.ts  chat-cloud-sync.ts  cloud-sync.ts  command.ts  engine.ts  entry.ts  export-import.ts  feedback.ts  folder.ts  import.ts  index.ts  local-backup.ts  menu.ts  password-history.ts  rdp.ts  settings.ts  ssh-keygen.ts  team-crypto.ts  team-vault.ts  team.ts  terminal.ts  ui-state.ts  updater.ts  vault.ts  vnc.ts  web.ts
electron/ipc-server/: server.ts
electron/services/: agent-instructions.ts  analytics.ts  app-lifecycle.ts  audit.ts  constants.ts  dns-resolver.ts  env-config.ts  feedback.ts  logger.ts  mcp-gatekeeper.ts  mcp-migration.ts  state.ts  tool-approval.ts
freerdp-helper/: .gitignore  CMakeLists.txt  build-freerdp.sh
freerdp-helper/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  bundle-macos.sh
freerdp-helper/src/: cliprdr.c  cliprdr.h  cliprdr_file.c  cliprdr_file.h  cliprdr_win32.c  cliprdr_win32.h  connection.c  connection.h  disp.c  disp.h  input.c  input.h  main.c  output.c  output.h  pointer.c  pointer.h  protocol.c  protocol.h
mcp/: package-lock.json  package.json
mcp/src/: analytics.ts  audit.ts  daily-quota.ts  data-dir.ts  index.ts  ipc-client.ts  mask-secrets.ts  rate-limiter.ts  tool-categories.ts
patches/: @novnc+novnc+1.6.0.patch
release-notes/: manifest.json
scripts/: afterPack.cjs  build-linux.sh  build-macos.sh  build-windows.ps1  generate-icons.sh  install-mcp.sh
src/: App.test.tsx  App.tsx  index.css  overlay.tsx  picker.tsx
src/hooks/: useAppIcon.ts  useKeyboardShortcuts.ts  useNativeViewVisibility.ts  usePopoverPosition.ts  useRemoteClipboard.ts  useTheme.ts
src/lib/: constants.ts  electron.ts  errorMessages.ts  openDashboard.ts  resolveConfig.ts  schemes.ts  sessionOptions.ts  terminalTheme.ts  themes.ts  tier.ts  totp.ts  vnc-keysyms.ts
src/stores/: aiStore.ts  authStore.ts  connectionStore.ts  entryStore.ts  layoutStore.ts  sessionStore.ts  settingsStore.ts  sidebarStore.ts  teamStore.ts  tierStore.ts  toolApprovalStore.ts  vaultStore.ts  webTabStore.ts
src/themes/: native-schemes.css  platform-macos.css  platform-ubuntu.css  platform-windows.css
src/types/: auth.ts  credential.ts  entry.ts  ipc.d.ts  novnc.d.ts  toast.ts  whats-new.ts
src/utils/: autotype.ts  contextMenu.ts  passwordGenerator.ts  sshKeyTypes.ts
supabase/: config.toml
webview2-helper/: .gitignore  build.ps1
webview2-helper/ConduitWebView2/: ConduitWebView2.csproj  PipeProtocol.cs  Program.cs  WebView2Host.cs
(+244 files in other folders)
